# aiogram-bot-template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
deploy/: init-db.sh
tg-bot/: Makefile  alembic.ini  pyproject.toml
tg-bot/alembic/: env.py
tg-bot/app/: __main__.py  loader.py
tg-bot/app/data/config/: __init__.py  default.py  utils.py
tg-bot/app/data/db/: __init__.py
tg-bot/app/data/db/connection/: session.py
tg-bot/app/data/db/models/: __init__.py  user.py
tg-bot/app/handlers/: __init__.py  adduser.py  start.py
tg-bot/app/utils/: logging.py
